--- a/UI/login.html
+++ b/UI/login.html
@@ -20,21 +20,22 @@
                 <form class="login-form">
                     <div class="form-holder">
                         <label class="form-holder-label">#</label>
-                        <input type="email" class="form-holder-item" id="user-name" 
-                            placeholder="username" required/>
+                        <input type="text" class="form-holder-item" id="user-name" 
+                            placeholder="username" minlength="4" maxlength="15" required/>
                     </div>
 
                     <div class="form-holder">
                         <label class="form-holder-label">#</label>
                         <input type="password" class="form-holder-item" id="user-name" 
-                                placeholder="password" required/>
+                                placeholder="password" minlength="8" maxlength="15" required/>
                     </div>
 
                     <div class="form-holder ">
                          <button type="submit" class="form-holder-item">Login</input>
                     </div>
-                    <div class="form-holder">
-                        <a href="#" class="form-holder-action">forgot password?</a>
+                    <div class="form-holder step-down">
+                        <a href="#" class="form-holder-action text-left">SIGNUP</a>
+                        <a href="#" class="form-holder-action text-right">forgot password?</a>
                     </div>
                 </form>
             </div>
