[#164674537] Linked login form to dashboard

--- a/UI/login.html
+++ b/UI/login.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>
-            EPIC-MAIL SYSTEM
+            EPIC MAIL SYSTEM
         </title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <meta name="description" content="EPIC-MAIL SYSTEM">
@@ -14,10 +14,10 @@
     <body>
         <div class="container">
             <div class="logo">
-                EPIC EMAIL
+                EPIC MAIL
             </div>
             <div class="box">
-                <form class="login-form">
+                <form class="login-form" action="./">
                     <div class="form-holder">
                         <label class="form-holder-label">#</label>
                         <input type="text" class="form-holder-item" id="user-name" 
@@ -46,7 +46,7 @@
 
     <script type="text/javascript">
         window.onload = function(){
-            App()
+            //LoginApp()
         }
     </script>
 
