--- a/UI/index.html
+++ b/UI/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>
-            EPIC-MAIL SYSTEM
+            EPIC MAIL SYSTEM
         </title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <meta name="description" content="EPIC-MAIL SYSTEM">
@@ -12,7 +12,54 @@
     </head>
 
     <body>
-        
+        <div class="header">
+            <div class="logo">
+               <h3>EPIC MAIL</h3>
+            </div>
+            <div class="nav">
+                <div class="nav-item">
+                    <span id="time-date"></span>
+                </div>
+                <div class="nav-item">
+                    <a href="./login.html" class="logout">logout</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="sidebar">
+                <div class="menu-item compose-message-button " 
+                    onclick="loadLocalHTML('compose.html')"> 
+                        Compose Message 
+                </div>
+                <div class="menu-item" onclick="loadLocalHTML('inbox.html')">
+                    Inbox (2)
+                </div>
+                <div class="menu-item" onclick="loadLocalHTML('outbox.html')">
+                    Outbox (6)
+                </div>
+                <div class="menu-item" onclick="loadLocalHTML('sent.html')">
+                    Sent
+                </div>
+                <div class="menu-item" onclick="loadLocalHTML('draft.html')">
+                    Draft
+                </div>
+                <div class="menu-item" onclick="loadLocalHTML('trash.html')">
+                    Trash
+                </div>
+                <div class="menu-item" onclick="loadLocalHTML('spam.html')">
+                    Spam (200)
+                </div>
+                <div class="menu-item" onclick="loadLocalHTML('groups.html')">
+                    Groups
+                </div>
+            </div>
+            <div class="mainbar">
+                <div id="main-body">
+
+                </div>
+            </div>
+        </div>
 
     </body>
 
@@ -20,6 +67,7 @@
 
     <script type="text/javascript">
         window.onload = function(){
+            loadLocalHTML('inbox.html');
             App()
         }
     </script>
