--- a/UI/login.html
+++ b/UI/login.html
@@ -35,18 +35,36 @@
                     </div>
                     <div class="form-holder step-down">
                         <a href="#" class="form-holder-action text-left">SIGNUP</a>
-                        <a href="#" class="form-holder-action text-right">forgot password?</a>
+                        <a href="#" class="form-holder-action text-right" 
+                            onclick="document.getElementById('reset-pass-modal').style.display='block'" >forgot password?</a>
                     </div>
                 </form>
             </div>
         </div>
+        <div id="reset-pass-modal" class="modal">
+                <span onclick="document.getElementById('reset-pass-modal').style.display='none'" 
+                    class="close" title="Close Modal">&times;</span>
+                <div class="modal-content">
+                    <div class="modal-title">
+                        Enter Your Email or Phone Number to receive a reset link
+                    </div>
+                    <div class="modal-main">
+                        <div class="form-holder">
+                            <input type="text" class="form-holder-item" id="recover-to" 
+                                placeholder="Enter Your Email Here or Phone Number" minlength="12" maxlength="35" required/>
+                            <button type="submit" class="recover-button" id='reset-pass'>OK</button>
+                        </div>
+                    </div>
+
+                </div>
+            </div>  
     </body>
 
     <script src="static/js/App.js" type="text/javascript"></script>
 
     <script type="text/javascript">
         window.onload = function(){
-            //LoginApp()
+            LoginApp()
         }
     </script>
 
