--- a/UI/login.html
+++ b/UI/login.html
@@ -19,13 +19,13 @@
             <div class="box">
                 <form class="login-form" action="./">
                     <div class="form-holder">
-                        <label class="form-holder-label">#</label>
+                        <label class="form-holder-label"></label>
                         <input type="text" class="form-holder-item" id="user-name" 
                             placeholder="username" minlength="4" maxlength="15" required/>
                     </div>
 
                     <div class="form-holder">
-                        <label class="form-holder-label">#</label>
+                        <label class="form-holder-label"></label>
                         <input type="password" class="form-holder-item" id="user-name" 
                                 placeholder="password" minlength="8" maxlength="15" required/>
                     </div>
@@ -34,7 +34,7 @@
                          <button type="submit" class="form-holder-item">Login</input>
                     </div>
                     <div class="form-holder step-down">
-                        <a href="#" class="form-holder-action text-left">SIGNUP</a>
+                        <a href="./signup.html" class="form-holder-action text-left">SIGNUP</a>
                         <a href="#" class="form-holder-action text-right" 
                             onclick="document.getElementById('reset-pass-modal').style.display='block'" >forgot password?</a>
                     </div>
