[#164678711] updated code to include contacts page

--- a/UI/index.html
+++ b/UI/index.html
@@ -47,8 +47,8 @@
                 <div class="menu-item" onclick="loadMessage('trash')">
                     Trash
                 </div>
-                <div class="menu-item" onclick="loadMessage('spam')">
-                    Spam (200)
+                <div class="menu-item" onclick="loadLocalHTML('contacts.html')">
+                    Contacts (200)
                 </div>
                 <div class="menu-item" onclick="loadLocalHTML('groups.html')">
                     Groups
