[164728068] Added clear message for creating account

--- a/UI/login.html
+++ b/UI/login.html
@@ -34,8 +34,10 @@
                          <button type="submit" class="form-holder-item">Login</input>
                     </div>
                     <div class="form-holder step-down">
-                        <a href="./signup.html" class="form-holder-action text-left">SIGNUP</a>
-                        <a href="#" class="form-holder-action text-right" 
+                        <a href="./signup.html" class="form-holder-action no__account">
+                            No Account ?. Create Account Now
+                        </a>
+                        <a href="#" class="form-holder-action forgot_password" 
                             onclick="document.getElementById('reset-pass-modal').style.display='block'" >forgot password?</a>
                     </div>
                 </form>
