--- a/UI/signup.html
+++ b/UI/signup.html
@@ -30,6 +30,11 @@
                                 placeholder="Prefered email" minlength="4" maxlength="15" required/>
                     </div>
                     <div class="form-holder">
+                        <label class="form-holder-label"></label>
+                        <input type="text" class="form-holder-item" id="user-email-recovery" 
+                                placeholder="Enter recovery email" minlength="4" maxlength="15" required/>
+                    </div>
+                    <div class="form-holder">
                             <label class="form-holder-label"></label>
                             <input type="password" class="form-holder-item" id="user-pass" 
                                     placeholder="Prefered Password" minlength="8" maxlength="25" required/>
