[#164728068] Refactored the code under the menu-item

--- a/UI/index.html
+++ b/UI/index.html
@@ -27,22 +27,16 @@
             <div class="sidebar">
                 <div class="menu-item compose-message-button " 
                     onclick="loadLocalHTML('compose.html')"> 
-                        Compose Message 
+                        Send a  Message 
                 </div>
                 <div class="menu-item" onclick="loadMessage('inbox')">
                     Inbox (2)
                 </div>
-                <div class="menu-item" onclick="loadMessage('outbox')">
-                    Outbox (25)
-                </div>
                 <div class="menu-item" onclick="loadMessage('sent')">
-                    Sent
+                    Sent (25)
                 </div>
                 <div class="menu-item" onclick="loadMessage('draft')">
                     Draft
-                </div>
-                <div class="menu-item" onclick="loadMessage('trash')">
-                    Trash
                 </div>
                 <div class="menu-item" onclick="loadLocalHTML('contacts.html')">
                     Contacts (200)
