[#164728068] Formatted the input placeholders

--- a/UI/signup.html
+++ b/UI/signup.html
@@ -21,13 +21,13 @@
                     <div class="form-holder">
                         <label class="form-holder-label"></label>
                         <input type="text" class="form-holder-item" id="user-fullname" 
-                            placeholder="Fullname" minlength="4" maxlength="15" required/>
+                            placeholder="Full name" minlength="4" maxlength="15" required/>
                     </div>
 
                     <div class="form-holder">
                         <label class="form-holder-label"></label>
                         <input type="text" class="form-holder-item" id="user-email" 
-                                placeholder="Prefered email" minlength="4" maxlength="15" required/>
+                                placeholder="Preferred email" minlength="4" maxlength="15" required/>
                     </div>
                     <div class="form-holder">
                         <label class="form-holder-label"></label>
@@ -37,7 +37,7 @@
                     <div class="form-holder">
                             <label class="form-holder-label"></label>
                             <input type="password" class="form-holder-item" id="user-pass" 
-                                    placeholder="Prefered Password" minlength="8" maxlength="25" required/>
+                                    placeholder="Preferred Password" minlength="8" maxlength="25" required/>
                     </div>
                     <div class="form-holder">
                                 <label class="form-holder-label"></label>
@@ -48,7 +48,7 @@
                          <button type="submit" class="form-holder-item">CREATE Account</input>
                     </div>
                     <div class="form-holder step-down">
-                        <a href="./login.html" class="form-holder-action text-left">Login</a>
+                        <a href="./login.html" class="form-holder-action login">Login</a>
                     </div>
                 </form>
             </div>
