add regex pattern to fields [#165020630]

--- a/UI/signup.html
+++ b/UI/signup.html
@@ -21,13 +21,14 @@
                     <div class="form-holder">
                         <label class="form-holder-label"></label>
                         <input type="text" class="form-holder-item" id="user-firstname"
-                            name="firstname" placeholder="First name" minlength="4" maxlength="15" required/>
+                            name="firstname" placeholder="First name" minlength="4" maxlength="15" required
+                            pattern="([A-Za-z]).{2,25}"/>
                     </div>
                     <div class="form-holder">
                         <label class="form-holder-label"></label>
                         <input type="text" class="form-holder-item" id="user-lastname" 
                             name="lastname" placeholder="Last name" minlength="4" maxlength="15" required
-                            pattern="([A-Z][a-z]).{8,25}"/>
+                            pattern="([A-Za-z]).{2,25}"/>
                     </div>
                     <div class="form-holder">
                         
