--- a/UI/login.html
+++ b/UI/login.html
@@ -17,7 +17,7 @@
                 EPIC MAIL
             </div>
             <div class="box">
-                <form class="login-form" action="./">
+                <form class="login-form" method="POST" id="login-form">
                     <div class="form-holder">
                         <label class="form-holder-label"></label>
                         <input type="text" class="form-holder-item" id="user-name" 
@@ -26,12 +26,12 @@
 
                     <div class="form-holder">
                         <label class="form-holder-label"></label>
-                        <input type="password" class="form-holder-item" id="user-name" 
-                                placeholder="password" minlength="8" maxlength="15" required/>
+                        <input type="password" class="form-holder-item" id="user-pass" 
+                                placeholder="password" minlength="6" maxlength="15" required/>
                     </div>
 
                     <div class="form-holder ">
-                         <button type="submit" class="form-holder-item">Login</input>
+                         <button type="button" id='login-btn' class="form-holder-item">Login</input>
                     </div>
                     <div class="form-holder step-down">
                         <a href="./signup.html" class="form-holder-action no__account">
@@ -63,7 +63,6 @@
     </body>
 
     <script src="static/js/App.js" type="text/javascript"></script>
-
     <script type="text/javascript">
         window.onload = function(){
             LoginApp()
