--- a/UI/index.html
+++ b/UI/index.html
@@ -17,6 +17,9 @@
                <h3>EPIC MAIL</h3>
             </div>
             <div class="nav">
+                <div class="nav-item" id="user-profile">
+                    
+                </div>
                 <div class="nav-item">
                     <a href="./login.html" class="logout">logout</a>
                 </div>
@@ -56,11 +59,13 @@
     <script type="text/javascript">
         window.onload = function(){
             current_page = sessionStorage.getItem('current_page')
+            user = sessionStorage.getItem('username')
             if(current_page==undefined){
                 loadMessage('inbox')
             }else{
                 loadMessage(`${current_page}`)
             }
+            document.getElementById('user-profile').innerHTML = `Hi, <b>${user}</b>`
             App()
         }
     </script>
