adds UI redesign [#165083987]

--- a/UI/login.html
+++ b/UI/login.html
@@ -7,7 +7,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <meta name="description" content="EPIC-MAIL SYSTEM">
         <meta name="author" content="alexxsanya">
-
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
         <link rel="stylesheet" href="static/css/login.css">
     </head>
 
@@ -19,13 +19,21 @@
             <div class="box">
                 <form class="login-form" method="POST" id="login-form">
                     <div class="form-holder">
-                        <label class="form-holder-label"></label>
+                        <label class="form-holder-label">
+                            <span style="font-size: 1.5em; color: #fff;">
+                                <i class="fas fa-envelope-square"></i>
+                            </span>
+                        </label>
                         <input type="text" class="form-holder-item" id="user-name" 
                             placeholder="username" minlength="4" maxlength="15" required/>
                     </div>
 
                     <div class="form-holder">
-                        <label class="form-holder-label"></label>
+                        <label class="form-holder-label">
+                            <span style="font-size: 1.5em; color: #fff;">
+                                <i class="fab fa-expeditedssl"></i>
+                            </span>
+                        </label>
                         <input type="password" class="form-holder-item" id="user-pass" 
                                 placeholder="password" minlength="6" maxlength="15" required/>
                     </div>
