--- a/UI/index.html
+++ b/UI/index.html
@@ -9,6 +9,7 @@
         <meta name="author" content="alexxsanya">
 
         <link rel="stylesheet" href="static/css/layout.css">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     </head>
 
     <body>
@@ -21,7 +22,7 @@
                     
                 </div>
                 <div class="nav-item">
-                    <a href="./login.html" class="logout">logout</a>
+                    <a href="./login.html"  class="logout">logout</a>
                 </div>
             </div>
         </div>
@@ -30,19 +31,19 @@
             <div class="sidebar">
                 <div class="menu-item compose-message-button " 
                     onclick="loadLocalHTML('compose.html')"> 
-                        Send a  Message 
+                    <i class="far fa-paper-plane"></i> &nbsp; Send a  Message 
                 </div>
                 <div class="menu-item" onclick="loadMessage('inbox')">
-                    Inbox (2)
+                    <i class="fas fa-inbox"></i> &nbsp; Inbox
                 </div>
                 <div class="menu-item" onclick="loadMessage('sent')">
-                    Sent (25)
+                    <i class="fas fa-envelope-open-text"></i> &nbsp; Sent
                 </div>
                 <div class="menu-item" onclick="loadMessage('draft')">
-                    Draft
+                    <i class="far fa-folder-open"></i> &nbsp; Draft
                 </div>
                 <div class="menu-item" onclick="loadLocalHTML('groups.html')">
-                    Groups
+                    <i class="fas fa-users"></i> &nbsp; Groups
                 </div>
             </div>
             <div class="mainbar">
