ui design improvement [#165114092]

--- a/UI/login.html
+++ b/UI/login.html
@@ -21,7 +21,7 @@
                     <div class="form-holder">
                         <label class="form-holder-label">
                             <span style="font-size: 1.5em; color: #fff;">
-                                <i class="fas fa-envelope-square"></i>
+                                <i class="far fa-user"></i>
                             </span>
                         </label>
                         <input type="text" class="form-holder-item" id="user-name" 
