--- a/UI/index.html
+++ b/UI/index.html
@@ -36,6 +36,9 @@
                 <div class="menu-item" onclick="loadMessage('inbox')">
                     <i class="fas fa-inbox"></i> &nbsp; Inbox
                 </div>
+                <div class="menu-item" onclick="loadMessage('unread')">
+                        <i class="fas fa-inbox"></i> &nbsp; Unread
+                    </div>
                 <div class="menu-item" onclick="loadMessage('sent')">
                     <i class="fas fa-envelope-open-text"></i> &nbsp; Sent
                 </div>
@@ -84,7 +87,22 @@
                         </div>
                     </div>    
                 </div>
-            </div> 
+        </div> 
+
+        <div id="group-member-modal" class="modal">
+                <span onclick="document.getElementById('group-member-modal').style.display='none'" 
+                    class="close" title="Close Modal">&times;</span>
+                <div class="modal-content" style="min-width:500px !important;padding: 20px;">
+                    <div class="leftcolumn">
+                        <div class="card" id="main-area">
+                            <status id="memba-msg-status"></status>
+                            <div id="members-list">
+                                
+                            </div>
+                        </div>
+                    </div>    
+                </div>
+        </div> 
     </body>
 
     <script src="static/js/App.js" type="text/javascript"></script>
