commented unused code [#165114092]

--- a/UI/signup.html
+++ b/UI/signup.html
@@ -45,7 +45,7 @@
                                 placeholder="Preferred username" name="email"  minlength="4" maxlength="25" required/>
                         <label class="form-holder-label email">@epicmail.com</label>
                     </div>
-                    <div class="form-holder"> 
+                    <!--div class="form-holder"> 
                         <label class="form-holder-label">
                                 <span style="font-size: 1.5em; color: #fff;">
                                     <i class="fas fa-at"></i>
@@ -54,7 +54,7 @@
                         <input type="text" class="form-holder-item" id="user-email-recovery" 
                                 placeholder="Enter recovery email" 
                                 name="recovery_email" minlength="10" maxlength="50" required/>
-                    </div>
+                    </div -->
                     <div class="form-holder">
                             <label class="form-holder-label">
                                     <span style="font-size: 1.5em; color: #fff;">
