--- a/UI/signup.html
+++ b/UI/signup.html
@@ -19,6 +19,7 @@
             </div>
             <div class="box" style="width:500px;">
                 <form class="signup-form" id="signup-form" name="signup" method="POST">
+                    <div id="signup-status"></div>
                     <div class="form-holder">
                         <label class="form-holder-label">
                             <span style="font-size: 1.5em; color: #fff;">
