--- a/UI/login.html
+++ b/UI/login.html
@@ -18,6 +18,7 @@
             </div>
             <div class="box">
                 <form class="login-form" method="POST" id="login-form">
+                    <div id="login-status"></div>
                     <div class="form-holder">
                         <label class="form-holder-label">
                             <span style="font-size: 1.5em; color: #fff;">
