--- a/UI/index.html
+++ b/UI/index.html
@@ -34,16 +34,16 @@
                     <i class="far fa-paper-plane"></i> &nbsp; Send a  Message 
                 </div>
                 <div class="menu-item" onclick="loadMessage('inbox')">
-                    <i class="fas fa-inbox"></i> &nbsp; Inbox
+                    <i class="fas fa-envelope-open-text"></i> &nbsp; Inbox
                 </div>
                 <div class="menu-item" onclick="loadMessage('unread')">
-                        <i class="fas fa-inbox"></i> &nbsp; Unread
-                    </div>
+                    <i class="fas fa-envelope"></i> &nbsp; Unread
+                </div>
                 <div class="menu-item" onclick="loadMessage('sent')">
                     <i class="fas fa-envelope-open-text"></i> &nbsp; Sent
                 </div>
                 <div class="menu-item" onclick="loadMessage('draft')">
-                    <i class="far fa-folder-open"></i> &nbsp; Draft
+                    <i class="fas fa-folder-open"></i> &nbsp; Draft
                 </div>
                 <div class="menu-item" onclick="loadLocalHTML('groups.html')">
                     <i class="fas fa-users"></i> &nbsp; Groups
